--- a/src/tests/test3.in
+++ b/src/tests/test3.in
@@ -1,17 +1,17 @@
 fun coolname() : Iterable<Character> {
-	temp := 20;
+	int := 20;
 
 	for (num in 1<<100) {
 		if (num != 75) {
 		}
 		else {
 			for (t in num/3) {
-				temp := t;
+				int := t;
 			}
 		}
 	}
 	
-	if ((temp > 21) & (temp == 25)) {
+	if ((int > 21) & (int == 25)) {
 		return [character(121), character(101), character(115)];
 	}
 	
